added stats pages

--- a/DoctorWeb/donormanagement.html
+++ b/DoctorWeb/donormanagement.html
@@ -22,8 +22,8 @@
 <center><h2>Donor ID</h2></center>
 <center><h2>Username</h2></center>
 <center><img src="img/avatarnew.jpg" style="width:10%; height:10%"></center>
-<center><a class="btn" href="">View donor's medical details</a></center>
+<center><a class="btn" href="meddetails.html">View Donor </a></center>
 <br/>
-<center><a class="btn" href="">Generate Blood Analysis test report</a></center>
+<center><a class="btn" href="generate_bat.html">Generate Blood Analysis test report</a></center>
 </body>
 </html>
