--- a/DoctorWeb/generate_bat.html
+++ b/DoctorWeb/generate_bat.html
@@ -24,42 +24,47 @@
   </div> 
   <a href="homepage.html">Home</a>
 </div>
-<br/><br/><br/>
+<br/><br/>
+<center><h1>Blood Analysis Test Report</h></center>
 <center><h2>Donor ID</h2></center>
-<center><h2>Username</h2></center>
 <center><img src="img/avatarnew.jpg" style="width:10%; height:10%"></center>
 <center>
 <table>
   <tr>
-    <td>Gender</td>
-    <td>male</td>
-  </tr>
-  <tr>
-    <td>Blood type</td>
-    <td>O+</td>
-  </tr>
-  <tr>
-    <td>Birth day</td>
+    <td>RBC count</td>
     <td></td>
   </tr>
   <tr>
-    <td>Age</td>
+    <td>Neutrophils count</td>
     <td></td>
   </tr>
   <tr>
-    <td>Weight</td>
+    <td>Lymphocytes count</td>
     <td></td>
   </tr>
   <tr>
-    <td>Height</td>
+    <td>Monocytes count</td>
     <td></td>
   </tr>
   <tr>
-    <td>Diseases</td>
+    <td>Eosinophiles count</td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>Basophiles count</td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>Platelets count</td>
     <td></td>
   </tr>
 
 </table>
 </center>
+
+<br>
+<center><a class="btn" href="welcomeback.html">Generate Report</a></center>
+<br>
+<br>
 </body>
 </html>
