--- a/DoctorWeb/welcomeback.html
+++ b/DoctorWeb/welcomeback.html
@@ -5,7 +5,6 @@
 	<style type="text/css">
 	form{
 		background-color:white;
-		padding-top: 100px;
 		padding-left:300px;
 		width:55%;
 	}
@@ -14,9 +13,19 @@
 </head>
 <body>
 
+	
+	<div class="navbar">
+		
+		<a href="#news">About</a>
+        <a href="login.html">Sign In</a>
+        <a href="homepage.html">Home</a>
+		
+	  </div>
+
+	  <center><a href="homepage.html"><img src ="img/l8.jpg"></img></a></center>
+
 	<form>
 		<center><h2 style="color: #cc0000;">Welcome back</h2></center>
-		<br/><br/><br/>
 		<center>
 		Username
 		<br/>
@@ -28,7 +37,10 @@
 		<input style="padding-left: 6px;" type="password" name="password">
 		</center>
 		<br/><br/>
-		<center><a href="logged.html"><input class="btn" type="submit" name="continue" value="Continue"></a></center>
+		<center><a class="btn" href="stats/master.html"> Continue
+			<!-- <input class="btn" type="submit" name="continue" value="Continue"> -->
+
+		</a></center>
 		<center><a class="forgotpassword" href="">Forgot your username / password</a></center>
 	</form>
 
