--- a/DoctorWeb/bloodstocks.html
+++ b/DoctorWeb/bloodstocks.html
@@ -22,11 +22,11 @@
     </button>
     <div class="dropdown-content">
       <a href="#">Map</a>
-      <a href="#">Donors</a>
-      <a href="#">Blood Stocks</a>
+      <a href="finddonor.html">Donors</a>
+      <a href="bloodstocks.html">Blood Stocks</a>
     </div>
   </div> 
-  <a href="#home">Home</a>
+  <a href="homepage.html">Home</a>
 </div>
 <br/><br/><br/>
 <h2>Blood Stocks</h2>
