--- a/DoctorWeb/finddonor.html
+++ b/DoctorWeb/finddonor.html
@@ -20,17 +20,17 @@
     </button>
     <div class="dropdown-content">
       <a href="#">Map</a>
-      <a href="#">Donors</a>
-      <a href="#">Blood Stocks</a>
+      <a href="finddonor.html">Donors</a>
+      <a href="bloodstocks.html">Blood Stocks</a>
     </div>
   </div> 
-  <a href="#home">Home</a>
+  <a href="homepage.html">Home</a>
   
   
 </div>
 	<form>
 		<span style="padding-right: 220px;">Search Donor ID</span>
-		<img src="img/handlense.jpg">
+		<a href="donormanagement.html"><img src="img/handlense.jpg"></a>
 		<br/>
 		<input type="text" name="donorid" size="50">
 	</form>
