footer was added along with the navigation bar

--- a/DoctorWeb/stats/top.html
+++ b/DoctorWeb/stats/top.html
@@ -6,6 +6,8 @@
 
         body{
             background-color: #cc0000;
+            margin: 0;
+            font-family: Arial, Helvetica, sans-serif;
         }
         
         .menu{
@@ -25,7 +27,7 @@
             background-color: #ddd;
             border-radius: 6px;
             color: #000;
-            padding: 7px;
+            padding: 10px;
         }
 
         td{
@@ -34,7 +36,6 @@
 
         
     </style>
-	<link rel="stylesheet" href="../Styles.css" type="text/css"/>
 </head>
 <body>
 
@@ -44,20 +45,23 @@
         <th>
             <a href=""><img style="width: 100px; height:65px; padding: 10px;" src ="../img/l8.jpg"></img></a>
         </th>
-        <td style="padding-left: 100px;">
-            <h2 style="color: #fff;">Donation Statistics</h2>
+        <td style="padding-left: 500px; padding-right: 100px;">
+            <center><h2 style="color: #fff;">DoctorID</h2></center>
         </td>
-        <td style="padding-left: 550px;">
-            <a class="menu" href="../map.html"  target="blank">Profile</a> 
-        </td>
-        <td>
-            <a class="menu" href="../map.html"  target="blank">Map</a> 
+        <td style="padding-left: 70px;">
+            <a class="menu" href="../viewProfile.html"  target="self">Profile</a> 
         </td>
         <td>
-            <a class="menu" href="../finddonor.html"  target="top">Donors</a>
+            <a class="menu" href="../map.html"  target="self">Map</a> 
         </td>
         <td>
-            <a class="menu" href="../bloodstocks.html"  target="top">Blood Stocks</a>
+            <a class="menu" href="../finddonor.html"  target="self">Donors</a>
+        </td>
+        <td>
+            <a class="menu" href="../bloodstocks.html"  target="self">Blood Stocks</a>
+        </td>
+        <td>
+            <a class="menu" href="../homepage.html"  target="self">Log Out</a>
         </td>
         </tr>
     </table>
