--- a/DoctorWeb/bloodstocks.html
+++ b/DoctorWeb/bloodstocks.html
@@ -7,29 +7,40 @@
 			width:12%;
 		}
 		span{
-			padding-right: 55px;
-			padding-left: 55px;
+			padding-right: 53px;
+			padding-left: 53px;
 		}
 	</style>
 	<link rel="stylesheet" href="Styles.css" type="text/css"/>
+	<script src="https://kit.fontawesome.com/376ba00187.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
 	<div class="navbar">
-  <a href="#news">Settings</a>
+		<div class="dropdown">
+			<button class="dropbtn">Settings
+			</button>
+			<div class="dropdown-content">
+			  <a href="viewProfile.html">View Profile</a>
+			  <a href="homepage.html">Log Out</a>
+			</div>
+		  </div>
   <div class="dropdown">
     <button class="dropbtn">Menu 
     </button>
     <div class="dropdown-content">
-      <a href="#">Map</a>
+      <a href="map.html">Map</a>
       <a href="finddonor.html">Donors</a>
       <a href="bloodstocks.html">Blood Stocks</a>
     </div>
   </div> 
-  <a href="homepage.html">Home</a>
+  <a href="">Notification</a>
+  <a href="stats/master.html">Home</a>
 </div>
-<br/><br/><br/>
-<h2>Blood Stocks</h2>
+<br/><br/>
+<center><img style="width: 140px; height:91px; padding: 0px;" src="img/l8.JPG" alt="Donors&Drives"></center>
+<br/>
+<center><h2>Blood Stocks</h2></center>
 	<img src="img/ap.jpg" >
 	<img src="img/an.jpg">
 	<img src="img/bp.jpg">
@@ -47,5 +58,41 @@
 	<span>10 days</span>
 	<span>10 days</span>
 	<span>10 days</span>
+
+
+	<div class="footer">
+		<div class="footer-left">
+		  <img src="img/l8.JPG" alt="logo" style="height:80px; width:120px;">
+		  <p>DonorsNDrives2020</p>
+		</div>
+
+		<div class="footer-center">
+		  <div>
+			<i class="fas fa-map-marker-alt"></i>
+			<p><span>UCSC Building Complex,</span> 35, Reid Avenue, Colombo 7</p>
+		  </div>
+		  <div>
+			<i class="fas fa-phone-alt"></i>
+			<p>555 555 5555</p>
+		  </div>
+		  <div>
+			<i class="fas fa-envelope"></i>
+			<p>123@gmail.com</p>
+		  </div>
+		</div>
+
+		<div class="footer-right">
+		  <p><span>About DonorsNDrives...</span>aaa bbb ccc ddd eee fff ggg hhh iii jjj kkk lll</p>
+		  <div class="footer-icons">
+			<a href="#"><i class="fab fa-facebook-f" style="color:white;"></i></a>
+			<a href="#"><i class="fab fa-twitter" style="color:white;"></i></a>
+			<a href="#"><i class="fab fa-github" style="color:white;"></i></a>
+			<a href="#"><i class="fab fa-whatsapp" style="color:white;"></i></a>
+		  </div>
+		</div>
+	</div>
+  </div>
+
+  
 </body>
 </html>
