--- a/DoctorWeb/welcomeback.html
+++ b/DoctorWeb/welcomeback.html
@@ -5,44 +5,79 @@
 	<style type="text/css">
 	form{
 		background-color:white;
-		padding-left:300px;
+    /* padding-left:300px; */ 
 		width:55%;
 	}
 </style>
-	<link rel="stylesheet" href="Styles.css" type="text/css"/>
+  <link rel="stylesheet" href="Styles.css" type="text/css"/>
+  <script src="https://kit.fontawesome.com/376ba00187.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
 	
 	<div class="navbar">
+
+    <img src="img/l8.jpg" alt="logo" style="width: 100px; height:65px; ">
 		
-		<a href="#news">About</a>
-        <a href="login.html">Sign In</a>
+        <a href="login.html">Sign Up</a>
         <a href="homepage.html">Home</a>
 		
 	  </div>
 
-	  <center><a href="homepage.html"><img src ="img/l8.jpg"></img></a></center>
-
-	<form>
+	  <br>
+<center>
+	<form method="post" action="stats/master.html">
+    <center><a href="homepage.html"><img src ="img/l8.jpg"></img></a></center>
 		<center><h2 style="color: #cc0000;">Welcome back</h2></center>
-		<center>
-		Username
+		
 		<br/>
-		<input style="padding-left: 4px;" type="text" name="username"></center>
+		<center><input style="padding-left: 4px;" type="text" name="username" value="Username"></center>
 		<br/>
-		<center>
-		Password
+		
 		<br/>
-		<input style="padding-left: 6px;" type="password" name="password">
-		</center>
+		<center><input style="padding-left: 6px;" type="password" name="password" value="Password"></center>
+		
 		<br/><br/>
-		<center><a class="btn" href="stats/master.html"> Continue
-			<!-- <input class="btn" type="submit" name="continue" value="Continue"> -->
-
-		</a></center>
+			<center><input class="btn" type="submit" name="continue" value="Continue"></center>
 		<center><a class="forgotpassword" href="">Forgot your username / password</a></center>
 	</form>
+</center>
+
+
+
+
+<div class="footer">
+  <div class="footer-left">
+    <img src="img/l8.JPG" alt="logo" style="height:80px; width:120px;">
+    <p>DonorsNDrives2020</p>
+  </div>
+
+  <div class="footer-center">
+    <div>
+      <i class="fas fa-map-marker-alt"></i>
+      <p><span>UCSC Building Complex,</span> 35, Reid Avenue, Colombo 7</p>
+    </div>
+    <div>
+      <i class="fas fa-phone-alt"></i>
+      <p>555 555 5555</p>
+    </div>
+    <div>
+      <i class="fas fa-envelope"></i>
+      <p>123@gmail.com</p>
+    </div>
+  </div>
+
+  <div class="footer-right">
+    <p><span>About DonorsNDrives...</span>aaa bbb ccc ddd eee fff ggg hhh iii jjj kkk lll</p>
+    <div class="footer-icons">
+      <a href="#"><i class="fab fa-facebook-f" style="color:white;"></i></a>
+      <a href="#"><i class="fab fa-twitter" style="color:white;"></i></a>
+      <a href="#"><i class="fab fa-github" style="color:white;"></i></a>
+      <a href="#"><i class="fab fa-whatsapp" style="color:white;"></i></a>
+    </div>
+  </div>
+</div>
+</div>
 
 </body>
 </html>
